# tensorpack

./: .gitignore  .lgtm.yml  .readthedocs.yml  .travis.yml  CHANGES.md  LICENSE  MANIFEST.in  README.md  example_alexnet.py  example_cifar10.py  example_mnist.py  example_svhn_digit.py  opt-requirements.txt  readthedocs.yml  requirements.txt  setup.cfg  setup.py  sotabench.py  sotabench_setup.sh  tox.ini  train.py  usercustomize.py
.github/: ISSUE_TEMPLATE.md  main.workflow  pull_request_template.md
dataflow/: README.md  base.py  batch.py  common.py  dftools.py
docs/: .gitignore  Makefile  README.md  conf.py  index.rst  requirements.txt  tensorpack.xml  update.sh
examples/: README.md  boilerplate.py  char-rnn.py  cifar-convnet.py  cifar10-convnet.py  cifar100-convnet.py  cifar10_convnet.py  cifar10_resnet.py  distributed.py  load-alexnet.py  load-vgg16.py  load-vgg19.py  load_alexnet.py  load_vgg16.py  mnist-convnet.py  mnist-distributed.py  mnist-keras-v2.py  mnist-keras.py  mnist-tfslim.py  mnist-visualizations.py  mnist_convnet.py  svhn-digit-convnet.py  svhn_digit_convnet.py  tox.ini
layers/: __init__.py  _common.py  conv2d.py  fc.py  regularize.py
models/: _common.py  fc.py  pool.py  regularize.py
scripts/: README.md  checkpoint-manipulate.py  checkpoint-prof.py  dump-dataflow.py  dump-model-params.py  dump-train-config.py  dump_model_params.py  dump_train_config.py  imgclassify.py  ls-checkpoint.py  plot-point.py  serve-data.py
sotabench/: sotabench.py  sotabench.yml  sotabench_setup.sh
tensorpack/: README.md  __init__.py  infer.py  libinfo.py  (+2 more)
(+547 files in other folders)
