[metadata]
author = TensorPack contributors
author-email = ppwwyyxxc@gmail.com
url = https://github.com/ppwwyyxx/tensorpack
keywords = tensorflow, deep learning, neural network
license = Apache

[options]
zip_safe = False		    # dataset and __init__ use file
packages = find:				# will call find_packages()

[wheel]
universal = 1

[yapf]
based_on_style = google
spaces_before_comment = 4
split_before_logical_operator = true
