[metadata]
author = TensorPack contributors
author-email = ppwwyyxxc@gmail.com
url = https://github.com/tensorpack/tensorpack
keywords = tensorflow, deep learning, neural network
license = Apache

[options]
zip_safe = False		    # dataset and __init__ use file
# will call find_packages()
packages = find:

[wheel]
universal = 1
